# monad-gen

./: Monad(2,2).md  Note.md  cabal.project
alternative-alternatives/: README.md  alternative-alternatives.cabal
alternative-alternatives/src/Data/: DoubleMonoid.hs
alternative-alternatives/src/Data/DoubleMonoid/: Class.hs  Free.hs  LZ.hs
alternative-alternatives/src/Data/List/: ZList.hs
cartesian-profunctors/: .ghci  CHANGELOG.md  README.md  cartesian-profunctors.cabal
cartesian-profunctors/src/Data/: FunctorShape.hs  PTraversable.hs  Transparent.hs
cartesian-profunctors/src/Data/Coerce/: Extra.hs
cartesian-profunctors/src/Data/Finitary/: Enum.hs
cartesian-profunctors/src/Data/Profunctor/: Cartesian.hs  Counting.hs  Day.hs  Exhaust.hs  Extra.hs  FinFn.hs  Power.hs  UniconEncoding.hs
cartesian-profunctors/src/GHC/Generics/: Orphans.hs
cartesian-profunctors/src/Internal/: AuxProfunctors.hs  Util.hs
comonad-dist-gen/: CHANGELOG.md  comonad-dist-gen.cabal  comonad-dist-gen.cache  comonad-dist-gen.output
comonad-dist-gen/app/: Main.hs  StoreDistributiveLaw.hs
comonad-dist-gen/app/Data/: ZMod.hs
comonad-dist-gen/app/Data/Finitary/: Extra.hs
comonad-dist-gen/app/Util/: WrappedIntegral.hs
comonad-dist-gen/src/: C.hs  StoreDistributiveLaw.hs
comonad-dist-gen/src/C/: Act.hs  St.hs
comonad-dist-gen/src/Control/Comonad/: Acting.hs  DistributiveLaw.hs
comonad-dist-gen/src/Data/: Torsor.hs
comonad-dist-gen/src/Data/Functor/: Store.hs
free-alternative-other/: LICENSE  README.md  free-alternative-other.cabal
model-finder/: CHANGELOG.md  LICENSE  model-finder.cabal
model-finder/src/: ModelFinder.hs
model-finder/src-dependent/ModelFinder/Dependent/: Expr.hs  Solver.hs
model-finder/src-hegg/: LensUtil.hs
model-finder/src-hegg/ModelFinder/: Model.hs  Solver.hs  Term.hs
model-finder/src-hegg/ModelFinder/Examples/: Group.hs
model-finder/src-hegg/ModelFinder/Solver/: Internal.hs  NFSolver.hs
model-finder/src-hegg/ModelFinder/Term/: EGraph.hs
model-finder/src/ModelFinder/: Expr.hs  Solver.hs
model-finder/src/ModelFinder/Examples/: Group.hs  Monad.hs
model-finder/src/ModelFinder/Sig/: Mono.hs
model-finder/test/: Main.hs  dependent.hs  groups.hs
monad-gen/: .gitignore  measure.sh  measure_time.sh  measured_times  measured_times_v1  measured_times_v2  monad-gen-G.txt  monad-gen-H.txt  monad-gen-J.txt  monad-gen-T.txt  monad-gen-W.txt  monad-gen.cabal
monad-gen/app/: ApplicativeGen.hs  ApplicativeGenMain.hs  Enum1.hs  EquationSolver.hs  Gen.hs  Isomorphism.hs  Main.hs  MonadGen.hs  MonadLaws.hs  MonadTerm.hs  MonoidGen.hs  NatMap.hs  Newtypes.hs  Set1.hs  Targets.hs  Util.hs  binary_join.hs  testRaw.hs
monad-gen/app/Data/: ContraVec.hs  IntRange.hs  LazyVec.hs  Two.hs
monad-gen/app/Data/Array/: Extra.hs
monad-gen/app/Data/Functor/: Counting.hs  Numbering.hs
monad-gen/app/Data/IntRange/: Unsafe.hs
monad-gen/app/Data/PTraversable/: Extra.hs
monad-gen/app/Data/Profunctor/: FinFn.hs
monad-gen/app/Enum1/: Extra.hs
monad-gen/app/Set1/: Internal.hs
monad-gen/lib/: ApplicativeData.hs  ApplicativeGen.hs  ApplicativeLaws.hs  CSP.hs  EquivalenceUtil.hs  Isomorphism.hs  MonadData.hs  MonadGen.hs  MonadGen2.hs  MonadLaws.hs  MonoidData.hs  MonoidGen.hs  Targets.hs
monad-gen/lib/Data/: Bitmap.hs  BoolSet.hs  Fin.hs  IntervalSet.hs  Permutation.hs  Two.hs
monad-gen/lib/Data/Array/: Extra.hs
monad-gen/lib/Data/PTraversable/: Extra.hs
monad-gen/lib/MonadGen/: BinaryJoin.hs
monad-gen/lib/Targets/: F.hs
monad-gen/old-output/: monad-gen-G-prime.txt  monad-gen-G.txt  monad-gen-T.txt
monad-gen/output/: F.txt  G.txt  H.txt  I.txt  J.txt  Maybe.txt  T.txt  Tgroups.txt  U.txt  Ugroups.txt  V.txt  Writer.txt  Writer3.txt  monad-gen-J.txt  monad-gen-T.txt  monad-gen-W.txt
monad-gen/output/(,) N3/: applicative.txt  applicative_data  monad.txt  monad_data  monoid_data
monad-gen/output/(,) Two/: applicative.txt  applicative_data  monad.txt  monad_data  monoid.txt  monoid_data
monad-gen/output/E1W2/: applicative_data  monad_data  monoid_data
monad-gen/output/E2W2/: monad_data
monad-gen/output/F/: applicative.txt  applicative_data  monad_data  monoid.txt  monoid_data
monad-gen/output/G/: applicative.txt  applicative_data  monad.txt  monad_data  monoid.txt  monoid_data
monad-gen/output/H/: applicative.txt  applicative_data  monad.txt  monad_data  monoid.txt  monoid_data
monad-gen/output/I/: applicative.txt  applicative_data  monad.txt  monad_data  monoid.txt  monoid_data
monad-gen/output/I'/: applicative.txt  monad.txt  monad_data  monoid.txt  monoid_data
monad-gen/output/J/: applicative.txt  applicative_data  monad.txt  monad_data  monoid.txt
monad-gen/output/K/: applicative.txt  applicative_data  monad.txt  monoid.txt  monoid_data
monad-gen/output/L/: applicative.txt  monad.txt  monoid.txt
monad-gen/output/Maybe/: applicative.txt  applicative_data  monad.txt  monad_data  monoid.txt  monoid_data
monad-gen/output/St22/: monad_data  monoid_data
monad-gen/output/St32/: applicative_data  monad_data
monad-gen/output/St42/: applicative_data  monad_data  monoid_data
monad-gen/output/T/: applicative.txt  applicative_data  monad.txt  monad_data  monad_group.txt  monoid.txt
monad-gen/output/T_013/: applicative_data
monad-gen/output/T_112/: monad_data  monoid_data
monad-gen/output/U/: applicative.txt  monad.txt  monad_data  monad_group.txt  monoid.txt  monoid_data
monad-gen/output/V/: applicative.txt  applicative_data  monad.txt  monad_data  monoid.txt
monad-gen/output/Writer/: monad.txt
monad-gen/output/Writer3/: monad.txt  monoid.txt
monad-gen/output/applicative/: F.txt  G.txt  H.txt  I.txt  J.txt  Maybe.txt  T.txt  U.txt  V.txt  Writer.txt  Writer3.txt
monad-gen/test/: csp.hs
monad-ideals/: CHANGELOG.md  LICENSE  README.md  monad-ideals.cabal
nat-map/: CHANGELOG.md  README.md  nat-map.cabal
nat-map/src/: TraversableUtil.hs
nat-map/src/Data/: FunctorShape.hs  NatMap.hs  PreNatMap.hs  ShapeMap.hs  ShapeSet.hs
two-monoids-in-one/: CHANGELOG.md  README.md  two-monoids-in-one.cabal
(+52 files in other folders)
