cabal-version:      3.0
name:               alternative-alternatives
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
-- copyright:
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Data.DoubleMonoid.Class,
      Data.DoubleMonoid.Free,
      Data.DoubleMonoid.LZ.Class,
      Data.DoubleMonoid.LZ.Free,
      Data.DoubleMonoid.LZLC.Class,
      Data.DoubleMonoid.LZLC.Free,
      Data.DoubleMonoid.NearSemiring.Class,
      Data.DoubleMonoid.NearSemiring.Free,

      Data.List.ZList,
      Data.List.ZList.Long,

      Control.Applicative.Free.Zero,
      Control.Alternative.Free.LZLC,
    build-depends:
      base ^>=4.18,
      monad-ideals >= 0.1.1.0,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite alternative-alternatives-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        alternative-alternatives
