name:                cartesian-profunctors
synopsis:            Profunctors which keeps cartesian product and cocartesian coproduct.
description:         see README.md
version:             0.1.0.0
build-type:          Simple
category:            Data, Functor, Profunctor
cabal-version:       2.0
extra-source-files:  README.md
tested-with:         GHC == 9.6

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Profunctor.Cartesian,
    Data.Profunctor.Cartesian.Free,
    Data.Profunctor.Counting,
    Data.Profunctor.FinFn,
    Data.Profunctor.Exhaust,
    Data.Profunctor.Extra,
    Data.Profunctor.Power,
    Data.Profunctor.UniconEncoding,
    Data.Transparent,
    Data.PTraversable,
    GHC.Generics.Orphans
  other-modules:
    Data.PTraversable.Internal.Day
  build-depends:
      base >= 4.18 && < 5
    , transformers
    , containers
    , contravariant
    , profunctors
    , bifunctors
    , kan-extensions
    , finite-typelits
  ghc-options:         -Wall -Werror -Wcompat
  default-language:    Haskell2010

