name:                cartesian-profunctors
synopsis:            Profunctors which keeps cartesian product and cocartesian coproduct.
description:         see README.md
version:             0.2
build-type:          Simple
category:            Data, Functor, Profunctor
cabal-version:       2.0
extra-source-files:  README.md
tested-with:         GHC == 9.6

library
  hs-source-dirs:      src
  exposed-modules:
    Data.FunctorShape,
    Data.Profunctor.Day,
    Data.Profunctor.Cartesian,
    Data.Profunctor.Cartesian.Free,
    Data.Profunctor.Cocartesian.Free,
    Data.Profunctor.Counting,
    Data.Profunctor.FinFn,
    Data.Profunctor.Exhaust,
    Data.Profunctor.UniconEncoding,
    Data.Finitary.Enum,
    Data.PTraversable
  other-modules:
    Data.PTraversable.Internal.Day,
    Data.Profunctor.Extra,
    GHC.Generics.Orphans
  build-depends:
      vector ^>=0.13.2.0
    , base >= 4.18 && < 5
    , base-orphans >= 0.9.3 && < 1
    , transformers
    , containers
    , vector
    , contravariant
    , profunctors
    , bifunctors
    , kan-extensions
    , finite-typelits >= 0.2.1.0
    , finitary >= 2.1.3.0
    , vector-sized
    , ghc-typelits-knownnat
  ghc-options:         -Wall -Werror -Wcompat
  default-language:    Haskell2010

