cabal-version:      3.0
name:               comonad-dist-gen
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable comonad-dist-gen
    import:           warnings
    main-is:          Main.hs
    other-modules:
      Data.Finitary.Extra,
      StoreDistributiveLaw
    build-depends:
      base >=4.20.0.0,
      comonad,
      finitary,
      finite-typelits,
      vector-sized,
      ghc-typelits-knownnat
    hs-source-dirs:   app
    default-language: Haskell2010
