cabal-version:      3.0
name:               comonad-dist-gen
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Data.Finitary.Extra,
    Control.Comonad.DistributiveLaw,
    Control.Comonad.Acting,

    C,
    C.St,
    C.Act,
  hs-source-dirs: src
  build-depends:
    base >=4.18.0.0,
    containers,
    comonad,
    data-default,
    groups,
    monoid-extras,
    finitary,
    finite-typelits,
    vector-sized,
    ghc-typelits-knownnat
  default-language: Haskell2010

executable comonad-dist-gen
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Data.ZMod,
    Util.WrappedIntegral,
  build-depends:
    base >=4.18.0.0,
    containers,
    comonad,
    data-default,
    groups,
    monoid-extras,
    finitary,
    finite-typelits,
    vector-sized,
    ghc-typelits-knownnat,
    comonad-dist-gen
  hs-source-dirs: app
  default-language: Haskell2010
