cabal-version:      3.0
name:               free-alternative-other
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
-- copyright:
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Control.Applicative.Free.Zero,
      Control.Alternative.Free.LZLC,
    build-depends:
      base >=4.18
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite free-alternative-other
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.18.2.1,
        free-alternative-other
