cabal-version:      3.0
name:               model-finder
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
category:           Math
build-type:         Simple

extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library model-finder-dependent
    import: warnings
    exposed-modules:
      ModelFinder.Dependent.Solver,
      ModelFinder.Dependent.Expr,
      ModelFinder.Dependent.Examples.Monad

    build-depends:
      base >=4.19,
      mtl >=2.3.1,
      containers,
      vector,
      some,
      dependent-sum,
      dependent-map,
      finitary,
      constraints,
      constraints-extras

    hs-source-dirs:   src-dependent
    default-language: Haskell2010

library
    import:           warnings
    exposed-modules:
      ModelFinder.Term,
      ModelFinder.Model,
      ModelFinder.Solver,
      ModelFinder.Examples.Group,

    build-depends:
      base >=4.19,
      mtl >=2.3.1,
      hegg >= 0.6.0.0,
      containers

    hs-source-dirs:   src-hegg
    default-language: Haskell2010

test-suite model-finder-test-dependent
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          dependent.hs
    build-depends:
        base,
        model-finder-dependent
    ghc-options: -rtsopts "-with-rtsopts=-s"

test-suite model-finder-test-groups
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          groups.hs
    build-depends:
        base,
        model-finder
    ghc-options: -rtsopts "-with-rtsopts=-s"
