name:                monad-gen
version:             0.1.0.0
build-type:          Simple
cabal-version:       2.0

executable monad-gen
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules: 
    Data.PTraversable.Extra,
    Data.LazyVec,
    
    MonadLaws,
    MonadTerm,
    MonadGen,
    Isomorphism,
    MonoidGen,
--    ApplicativeGen,

    Util,
    Targets,
    Data.Two
  default-language:    Haskell2010
  build-depends:
      base >= 4.18 && < 5
    , contravariant
    , profunctors
    , reflection
    , vector
    , array
    , containers
    , mtl
    , ansi-terminal
    , equivalence
    , either
    , cartesian-profunctors
    , nat-map
  ghc-options:        -Wall -Wcompat -rtsopts=all -with-rtsopts=-M8G
