name:                monad-gen
version:             0.1.0.0
build-type:          Simple
cabal-version:       2.0

executable monad-gen
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules: 
    Data.PTraversable.Extra,
    Data.LazyVec,
    Data.Array.Extra,
    
    MonadLaws,
    MonadTerm,
    MonadGen,
    Isomorphism,
    MonoidGen,
    ApplicativeGen,
    EquationSolver,

    Util,
    Targets,
    Data.Two
  default-language:    Haskell2010
  build-depends:
      base >= 4.18 && < 5
    , contravariant >= 1.5
    , array >= 0.5.5
    , profunctors
    , reflection
    , vector
    , containers
    , equivalence
    , either

    , mtl
    , ansi-terminal

    , cartesian-profunctors
    , nat-map
  ghc-options:        -Wall -Wcompat -rtsopts=all -with-rtsopts=-M8G
