name:                monad-gen
version:             0.1.0.0
build-type:          Simple
cabal-version:       2.0

library
  hs-source-dirs: lib
  exposed-modules:
    Data.PTraversable.Extra,
    Data.LazyVec,
    Data.Array.Extra,
    
    MonadLaws,
    MonadTerm,
    MonadGen,
    Isomorphism,
    MonoidGen,
    ApplicativeGen,
    EquationSolver,

    Targets,
    Data.Two
  build-depends:
      base >= 4.18 && < 5
    , contravariant >= 1.5
    , array >= 0.5.5
    , profunctors
    , vector
    , containers
    , equivalence
    , either

    , mtl

    , cartesian-profunctors
    , nat-map
  default-language: Haskell2010
  ghc-options:        -Wall -Wcompat

executable monad-gen
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:
    Util
  default-language:    Haskell2010
  build-depends:
      base >= 4.18 && < 5
    , ansi-terminal
    , cartesian-profunctors
    , nat-map
    , monad-gen
  ghc-options:        -Wall -Wcompat -rtsopts=all -with-rtsopts=-M8G

executable applicative-gen
  hs-source-dirs:      app
  main-is:             ApplicativeGenMain.hs
  other-modules:
    Util
  default-language:    Haskell2010
  build-depends:
      base >= 4.18 && < 5
    , ansi-terminal
    , cartesian-profunctors
    , nat-map
    , monad-gen
  ghc-options:        -Wall -Wcompat -rtsopts=all -with-rtsopts=-M8G
