cabal-version:      3.0
name:               monad-ideals
version:            0.1.0.0

synopsis: Ideal Monads and coproduct of ideal monads

license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com

copyright: Copyright (C) 2008 Edward A. Kmett, 
           Copyright (C) 2004--2008 Dave Menendez, 
           Copyright (C) 2007 Iavor Diatchki
           Copyright (C) 2024 Koji Miyazato

category:           Control
build-type:         Simple

extra-doc-files:    CHANGELOG.md, README.md

common warnings
    ghc-options: -Wall

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:
        Control.Functor.Internal.Mutual,
        Control.Monad.Ideal,
--        Control.Monad.Isolate,
        Control.Monad.Isolated,
        Control.Monad.Coproduct,
        Control.Comonad.Coideal,

        Data.List.TwoOrMore,
        Data.List.NotOne,
        Data.Functor.KeepLeft,

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
      base ^>=4.18.2.0,
      bifunctors,
      comonad,
      semigroupoids

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite monad-ideals-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.18.2.0,
        monad-ideals
