cabal-version:      3.0
name:               nat-map
version:            0.1.0.0
synopsis:           Map-like data structure for partial natural transformations
license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
-- A copyright notice.
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: README.md

common warnings
    ghc-options: -Wall -Wcompat

library
    import:           warnings
    exposed-modules:
      Data.NatMap,
      Data.PreNatMap
    
    other-modules:
      TraversableUtil

    build-depends:
      base >=4.18 && < 5,
      containers,
      vector,
      profunctors,
      cartesian-profunctors,
      natural-transformation
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite nat-map-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base >=4.19.0.0,
        nat-map
