cabal-version:      3.0
name:               two-monoids-in-one
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Koji Miyazato
maintainer:         viercc@gmail.com
-- copyright:
category:           Control
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Data.TwoMonoids.Class,
      Data.TwoMonoids.Free,
      Data.TwoMonoids.LZ.Class,
      Data.TwoMonoids.LZ.Free,
      Data.TwoMonoids.LZLC.Class,
      Data.TwoMonoids.LZLC.Free,
      Data.TwoMonoids.NearSemiring.Class,
      Data.TwoMonoids.NearSemiring.Free,

      Data.List.ZList,
      Data.List.ZList.Long
    build-depends:
      base >=4.18,
      monad-ideals >= 0.1.1.0,
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite two-monoids-in-one-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base >=4.18.2.1,
        two-monoids-in-one
